Bugfixes/launch blockers bts (#323)
* UWM-CMS: Hide play button on iPhone4; hide on primary care template, too

* UWM-CMS: Retain old rule for hiding video play button as well

* UWM-CMS: Fix firefox line break on menu items

--- a/docroot/themes/custom/uwmed/src/components/header/header.scss
+++ b/docroot/themes/custom/uwmed/src/components/header/header.scss
@@ -140,6 +140,7 @@ body > header {
               padding: 0 10px 10px 10px;
               border-bottom: 1px solid #e5e5e6;
               background: transparent;
+              white-space: normal;
 
               i.fa {
                 float: right;
